--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource-variable/geist-mono": "^5.2.6",
     "@tailwindcss/vite": "^4.1.8",
     "bootstrap-icons": "^1.13.1",
     "react": "^19.1.0",
