--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource-variable/geist-mono": "^5.2.6",
     "@tailwindcss/vite": "^4.1.8",
+    "appwrite": "^18.1.1",
     "bootstrap-icons": "^1.13.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
